Fix for multiple dollar signs in Travel Credit Added spacing before Travel Credit section

--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -4945,3 +4945,6 @@ form.processing .button {
 #gift-balanace-amt:before {
     content: "$";
 }
+.gift-balance {
+	margin-top:1.25em;
+}	
