--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Description: Custom child theme for Indagare based on Thematic.
 Author: SHR
 Author URI: https://shr.global/
 Template: thematic
-Version: 2017.2.0
+Version: 2017.2.1
 Tags: white, three-columns, two-columns, fixed-width, theme-options, left-sidebar, right-sidebar, threaded-comments, sticky-post, microformats
 License: GNU General Public License v2.0
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
@@ -2753,6 +2753,8 @@ form.processing .button { background: gray; color: #bbb; cursor: progress; }
 .magazine .author-block .author-thumbnail.thumbnail { border-radius: 6em !important; width: 12em; height: 12em; }
 
 #gift-balanace-amt:before { content: "$"; }
+
+.gift-balance { margin-top: 1.25em; }
 
 .destinationlist-wrapper { display: block; min-height: 270px; }
 
